SalesforceProject2/src/objects/Book__c.object
<CustomObject>
    <fields>
        <fullName>Amount_of_pages__c</fullName>
        <description>test234</description>
        <label>Amount_of_pages__c</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Author__c</fullName>
        <description>Author</description>
        <label>Author</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Published__c</fullName>
        <label>Date Published</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Genre__c</fullName>
        <label>Genre</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Fantasy</fullName>
                </value>
                <value>
                    <fullName>History</fullName>
                </value>
                <value>
                    <fullName>Travel</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Grade__c</fullName>
        <label>Grade</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ISBN__c</fullName>
        <label>ISBN</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Publishing_House__c</fullName>
        <label>Publishing House</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>School Books</fullName>
                </value>
                <value>
                    <fullName>Penguin Books UK</fullName>
                </value>
                <value>
                    <fullName>Alyson Books</fullName>
                </value>
                <value>
                    <fullName>Atlass Press</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Book</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Book Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Book</pluralLabel>
    <recordTypes>
        <fullName>Fiction</fullName>
        <active>true</active>
        <label>Fiction</label>
    </recordTypes>
    <recordTypes>
        <fullName>Schoolbook</fullName>
        <active>true</active>
        <description>test Schoolbook</description>
        <label>Schoolbook</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>